@@ -15,6 +15,9 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * Do not disaplay garbage in dselect on monochrome terminals, by setting
     a missing ncurses character attribute. Closes: #155741, #157093
     Thanks to Sven Rudolph.
+  * Do not loop endlessly in dselect with very long package descriptions.
+    Closes: #179320, #342495
+    Thanks to John Zaitseff.
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
