@@ -1,3 +1,8 @@
+2008-01-01  John Zaitseff  <J.Zaitseff@zap.org.au>
+
+	* dselect/baselist.cc (baselist::wordwrapinfo): Stop processing when
+	exceeding infopad line limit, and add a warning message.
+
 2008-01-01  Sven Rudolph  <sr1@loom.sax.de>
 
 	* dselect/baselist.cc (baselist::startdisplay): Set helpscreen_attr
